shift cancvas -1px to the left because it was off (hack fix)

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -147,6 +147,7 @@ canvas{
   width: 100%;
   height:100%;
   vertical-align:top;
+  left: -1px;
 }
 
 #triangleGradient {
